Fixed overflow bug with project skills

--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: radial-gradient(#cce9ed,#c8d4e4, #f0d0e5, #f5eaf0, #ebf8f4);
+  background: radial-gradient(#cce9ed,#c8d4e4, #f0d0e5, #f5eaf0, #ebf8f4, #eeeeee);
   background-size: 400% 400%;
   animation: gradient 100s ease infinite;
   z-index: -1;
